fix(templates): add open module args to setenv template (#3066)